--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 streamlit
-streamlit-webrtc
-mediapipe==0.10.9
-protobuf==3.20.3
-opencv-python-headless<4.11
+mediapipe
+opencv-python-headless
+numpy
+pandas
 av
-numpy<2
